# ros_template

./: CMakeLists.txt  package.xml
include/ros_template/: pub.hpp
msg/: Info.msg
src/: main.cpp  par.cpp  pub.cpp  srv_client.cpp  srv_server.cpp
srv/: Trigger.srv
